--- a/index_pose.html
+++ b/index_pose.html
@@ -535,7 +535,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
     }catch(err){
       console.error(err);
       fab.removeAttribute('aria-busy');
-      alert('Impossibile condividere automaticamente. Ho scaricato l’immagine: caricala nelle Storie.');
+      alert('Impossibile condividere automaticamente.');
     }
   }
 
