--- a/index_pose.html
+++ b/index_pose.html
@@ -76,18 +76,15 @@
       linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
   }
 
-  /* Strisce oblique del “tetto/gradoni” come SVG separato (resistente allo screenshot) */
-  .roof-stripes{
-    position:absolute; inset:0; z-index:1; pointer-events:none; display:block;
-  }
+  /* Strisce oblique del tetto/gradoni (SVG: non spariscono nello screenshot) */
+  .roof-stripes{ position:absolute; inset:0; z-index:1; pointer-events:none; display:block; }
 
-  /* Campo (niente clip CSS: ci pensa lo SVG interno) */
+  /* Campo (SVG con clipPath: niente sbordo) */
   .pitch-wrap{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
-    z-index:2; /* sopra lo sfondo */
+    z-index:2;
   }
-  /* lo SVG riempie il contenitore */
   #pitch{ position:absolute; inset:0; width:100%; height:100%; display:block; }
 
   /* Layer giocatori (NO clip) */
@@ -169,23 +166,50 @@
     .subs-zone{ padding: 0 .8cqw; }
   }
 
-  /* FAB Share - Material (piccolo, top-right) */
+  /* FAB Share - Material, quadrato, top-left, contrasto alto */
   .fab-share{
     --fab-size: clamp(36px, 10cqw, 48px);
-    --fab-edge: clamp(8px, 1.8cqw, 14px);
-    position:absolute; top:var(--fab-edge); right:var(--fab-edge);
+    --fab-edge: clamp(10px, 2cqw, 16px);
+    --fab-radius: 12px;
+
+    position:absolute; top:var(--fab-edge); left:var(--fab-edge);
     width:var(--fab-size); height:var(--fab-size);
-    display:grid; place-items:center; border:none; border-radius:999px;
-    background:#2a2f3a; color:#fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,.30), 0 8px 16px rgba(0,0,0,.28);
+
+    display:grid; place-items:center;
+    border: 1px solid rgba(0,0,0,.08);
+    border-radius: var(--fab-radius);
+
+    background:#fff;     /* contrasto con lo sfondo scuro */
+    color:#111;          /* icona nera */
+    box-shadow: 0 2px 4px rgba(0,0,0,.18), 0 8px 16px rgba(0,0,0,.16);
     cursor:pointer; z-index:10;
-    transition: transform .15s ease, box-shadow .15s ease, background-color .15s ease, opacity .15s ease;
+
+    transition: transform .15s ease, box-shadow .15s ease,
+                background-color .15s ease, opacity .15s ease, border-color .15s ease;
   }
-  .fab-share:hover{ transform: translateY(-1px); background:#343a46; box-shadow: 0 3px 6px rgba(0,0,0,.32), 0 12px 20px rgba(0,0,0,.30); }
-  .fab-share:active{ transform: translateY(0); background:#3b4150; }
-  .fab-share:focus-visible{ outline:3px solid rgba(134,189,255,.55); outline-offset:2px; }
+  .fab-share:hover{
+    transform: translateY(-1px);
+    background:#f5f6f8;
+    box-shadow: 0 3px 6px rgba(0,0,0,.20), 0 12px 20px rgba(0,0,0,.18);
+  }
+  .fab-share:active{ transform: translateY(0); background:#eceef2; }
+  .fab-share:focus-visible{
+    outline: 3px solid rgba(66,133,244,.55);
+    outline-offset: 2px;
+  }
   .fab-share[aria-busy="true"]{ pointer-events:none; opacity:.7 }
-  .fab-share svg{ width: calc(var(--fab-size)*.55); height: calc(var(--fab-size)*.55); fill: currentColor; }
+  .fab-share svg{
+    width: calc(var(--fab-size) * .56);
+    height: calc(var(--fab-size) * .56);
+    fill: currentColor;
+  }
+  @container (max-width:520px){
+    .fab-share{
+      --fab-size: clamp(34px, 12cqw, 44px);
+      --fab-edge: clamp(8px, 2.2cqw, 12px);
+      --fab-radius: 10px;
+    }
+  }
 
   /* ===== EXPORT MODE (solo durante lo scatto) ===== */
   .stage.is-capturing{ border-radius:0 !important; box-shadow:none !important; background:#0b0c11 !important; }
@@ -223,13 +247,12 @@
       <img id="logo2" class="team-logo" alt="" crossorigin="anonymous">
     </div>
 
-    <!-- Campo (SVG con clipPath interno: nessun sbordo, nessuna metà scomparsa) -->
+    <!-- Campo (SVG con clipPath interno) -->
     <div class="pitch-wrap">
       <svg id="pitch" viewBox="0 0 1000 1000" preserveAspectRatio="none" aria-hidden="false">
         <defs>
           <!-- Trapezio del campo -->
           <clipPath id="clipPitch" clipPathUnits="userSpaceOnUse">
-            <!-- top a 12% (120), lati a 120..880 come in proiezione -->
             <polygon points="120,120 880,120 1000,1000 0,1000"/>
           </clipPath>
 
@@ -268,7 +291,7 @@
       <div class="subs-list" id="subsList"></div>
     </div>
 
-    <!-- FAB Share -->
+    <!-- FAB Share (Material, quadrato, top-left) -->
     <button id="shareFab" class="fab-share" title="Condividi" aria-label="Condividi">
       <!-- Material 'share' icon -->
       <svg viewBox="0 0 24 24" aria-hidden="true">
@@ -535,7 +558,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
     }catch(err){
       console.error(err);
       fab.removeAttribute('aria-busy');
-      alert('Impossibile condividere automaticamente.');
+      alert('Impossibile condividere automaticamente. Ho scaricato l’immagine: caricala nelle Storie.');
     }
   }
 
