--- a/index_pose.html
+++ b/index_pose.html
@@ -76,7 +76,7 @@
       linear-gradient(to bottom, var(--roof-mid) 0%, var(--roof-dark) 48%, #061007 100%);
   }
 
-  /* Strisce oblique tetto/gradoni (SVG) */
+  /* Strisce oblique tetto/gradoni (SVG: non spariscono nello screenshot) */
   .roof-stripes{ position:absolute; inset:0; z-index:1; pointer-events:none; display:block; }
 
   /* Campo (SVG con clipPath: niente sbordo) */
@@ -87,7 +87,7 @@
   }
   #pitch{ position:absolute; inset:0; width:100%; height:100%; display:block; }
 
-  /* Layer giocatori */
+  /* Layer giocatori (NO clip) */
   .players{
     position:absolute; left:50%; bottom:var(--pitch-bottom); transform:translateX(-50%);
     width:100%; height:75%;
@@ -208,33 +208,22 @@
   /* ===== EXPORT MODE (solo durante lo scatto) ===== */
   .stage.is-capturing{ border-radius:0 !important; box-shadow:none !important; background:#0b0c11 !important; }
   .stage.is-capturing svg{ shape-rendering: geometricPrecision; }
-  .stage.is-capturing #lines > *{ stroke-width: 3.6px !important; }
+  .stage.is-capturing #lines > *{ stroke-width: 3.6px !important; } /* linee campo appena più spesse */
 
-  /* ======= BOOST MATCHDAY solo su mobile (container ≤ 520px) ======= */
+  /* ======= BOOST MATCHDAY solo su mobile (container ≤ 520px) — versione corretta ======= */
   @container (max-width: 520px){
+    /* aumenta larghezza badge e “macchia” agendo sul discendente, non sul container */
     .matchday-badge{
-      --md-w: 96cqw;
+      --md-w: 96cqw;        /* prima 88cqw */
       --md-splat-bleed: 3.2cqh;
     }
+    /* testo più grande (override diretto delle dimensioni) */
     .matchday-text{ letter-spacing: .20cqw; }
     .matchday-text .md-top{ font-size: clamp(20px, 5cqw, 34px); }
     .matchday-text .md-sub{ font-size: clamp(14px, 3.2cqw, 22px); letter-spacing: .16cqw; }
   }
 
-  /* ======= COMPACT VS su mobile (container ≤ 520px) ======= */
-  @container (max-width: 520px){
-    .versus-badge{
-      --vs-gap: .8cqw;                                 /* loghi più vicini a VS */
-      --vs-logo-h: 8.2cqh;                             /* loghi un po’ più piccoli */
-      --vs-font: clamp(22px, 4.2cqw, 36px);            /* VS più grande */
-      --vs-letter: .22cqw;                              /* leggermente più compatto ma deciso */
-      /* opzionale: regola larghezza blocco
-         --vs-w: 88cqw;
-      */
-    }
-  }
-
-  /* Fallback per browser senza container queries (solo MATCHDAY; VS di solito ok) */
+  /* Fallback per browser senza container queries */
   @supports not (width: 1cqw){
     @media (max-width: 520px){
       .matchday-badge{ width: min(96vw, 96%); }
@@ -320,6 +309,7 @@
 
     <!-- FAB Share (Material, quadrato, top-left) -->
     <button id="shareFab" class="fab-share" title="Condividi" aria-label="Condividi">
+      <!-- Material 'share' icon -->
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.2 3.2 0 000-1.39l7-4.11a2.5 2.5 0 10-.9-1.45l-7 4.11a2.5 2.5 0 100 4.07l7.05 4.14a2.5 2.5 0 101.94-2z"/>
       </svg>
@@ -417,7 +407,7 @@ function normalizeDist(rows){
   const norm=s=>String(s||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase();
   let kNum=keys.find(k=>/#|num|numero|maglia/.test(norm(k)))||keys[0];
   let kName=keys.find(k=>/giocatore|player|nome|cognome/.test(norm(k)))||keys[1];
-  let kPhoto=keys.find(k=>/foto|photo|img|immagine/.test(norm(k)]);
+  let kPhoto=keys.find(k=>/foto|photo|img|immagine/.test(norm(k)));
   const map=new Map();
   rows.forEach(r=>{
     const n=Number(String(r[kNum]||'').trim()); if(!(n>0)) return;
